# Custom-Map-Reduce-for-Word-Count-in-Cpp-using-gRPC-and-HDFS

./: CMakeLists.txt  master.cc  masterslave.proto  slave.cc
